--- a/02-modular-design/Makefile
+++ b/02-modular-design/Makefile
@@ -1,2 +1,9 @@
+CXX = g++
+CXXFLAGS = -Wall -std=c++17
+
 main: student.o student-main.cpp
-	g++ -o main $^
+	$(CXX) $(CXXFLAGS) -o main $^
+	#$(CXX) $(CXXFLAGS) -o $@ $^
+
+clean:
+	$(RM) *.o main
