Binary search built

--- a/04-search-and-analysis/Makefile
+++ b/04-search-and-analysis/Makefile
@@ -1,5 +1,8 @@
 CXX = g++
 CXXFLAGS = -g -Wall -std=c++17
 
-main: main.cpp linear-search.o
+main: main.cpp linear-search.o binary-search.o
 	$(CXX) $(CXXFLAGS) -o $@ $^
+
+clean:
+	$(RM) *.o main
