Adding function declaration

--- a/05-recursion/Makefile
+++ b/05-recursion/Makefile
@@ -3,5 +3,5 @@ CXXFLAGS = -g -Wall -std=c++17
 
 CATCH = ../catch/catch.o
 
-test: test.cpp $(CATCH)
+test: test.cpp $(CATCH) search.o
 	$(CXX) $(CXXFLAGS) -o $@ $^
