moved template to cpp

--- a/07-templates-and-linked-lists/Makefile
+++ b/07-templates-and-linked-lists/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -g -Wall -std=c++17
 
 CATCH = ../catch/catch.o
 
-test: test.cpp $(CATCH) 
+test: test.cpp $(CATCH) utils.o 
 	$(CXX) $(CXXFLAGS) -o $@ $^
 	./$@
 
