--- a/07-templates-and-linked-lists/Makefile
+++ b/07-templates-and-linked-lists/Makefile
@@ -7,5 +7,9 @@ test: test.cpp $(CATCH) utils.o
 	$(CXX) $(CXXFLAGS) -o $@ $^
 	./$@
 
+test-node: test-node.cpp $(CATCH) node.o
+	$(CXX) $(CXXFLAGS) -o $@ $^
+	./$@
+
 clean:
 	$(RM) *.o a.out test # $(CATCH)
