--- a/07-templates-and-linked-lists/Makefile
+++ b/07-templates-and-linked-lists/Makefile
@@ -11,5 +11,9 @@ test-node: test-node.cpp $(CATCH) node.o
 	$(CXX) $(CXXFLAGS) -o $@ $^
 	./$@
 
+test-list: test-list.cpp $(CATCH) node.o list.o
+	$(CXX) $(CXXFLAGS) -o $@ $^
+	./$@
+
 clean:
 	$(RM) *.o a.out test # $(CATCH)
