--- a/09-sorting/Makefile
+++ b/09-sorting/Makefile
@@ -3,6 +3,6 @@ CXXFLAGS = -std=c++17 -Wall -g
 
 CATCH = ../catch/catch.o
 
-test: test.cpp insertion-sort.o $(CATCH) ../07-8-templates-and-linked-lists/utils.o
+test: test.cpp insertion-sort.o $(CATCH) ../07-8-templates-and-linked-lists/utils.o merge-sort.o
 	$(CXX) $(CXXFLAGS) -o $@ $^
 	./$@ --success
