Insert at root good

--- a/12-trees/Makefile
+++ b/12-trees/Makefile
@@ -3,6 +3,6 @@ CXXFLAGS = -g -Wall -std=c++17
 
 CATCH = ../catch/catch.o
 
-test: test.cpp node.o $(CATCH)
+test: test.cpp node.o tree.o $(CATCH)
 	$(CXX) $(CXXFLAGS) -o $@ $^
 	./$@ --success
